# stream-factory

./: .dockerignore  .env.real_test.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_social_accounts.py  0002_create_account_onboarding.py  0003_metrics_daily.py  0004_access_contacts.py  0005_phone_email_meta.py  0006_add_youtube_channel_id.py  0007_youtube_profile_and_videos.py  0008_account_purchase_fields.py  0009_vk_profile_and_posts.py  0010_youtube_video_content_type.py  0011_vk_videos_and_clips.py  0012_vk_sync_status_and_media_type.py  0013_vk_hotfix_finalize_schema.py  0014_youtube_content_v2.py  0015_tiktok_instagram_apify.py  0016_projects_and_publish_tasks.py  0017_add_project_id_to_social_accounts.py  0018_presets_and_tools.py  0019_publish_tasks_processing.py  0020_add_virality_score.py  0021_step_results_and_moderation.py  0022_seed_tools_full.py  0023_add_requires_moderation.py  0024_create_candidates_table.py  0025_add_briefs_and_candidate_origin.py  0026_brief_extra_fields.py  0027_seed_generation_tools.py  0028_add_project_policy.py  (+13 more)
backend/app/: db.py  main.py  models.py  routes_accounts.py  routes_auth.py  routes_briefs.py  routes_dashboard.py  routes_feed.py  routes_files.py  routes_instagram.py  routes_moderation.py  routes_ops.py  routes_presets.py  routes_projects.py  routes_scheduler.py  routes_tiktok.py  routes_tools.py  routes_virality.py  routes_vk.py  routes_youtube.py  schemas.py  settings.py
(+99 files in other folders)
